// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render TodoList with empty todo list 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-on-mobile"
    >
      Todos
    </div>
    <div
      className="show-on-desktop"
    >
      Todo
    </div>
    <div
      className="show-on-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No todo
      </span>
    </div>
  </div>
</div>
`;

exports[`should render TodoList with todos 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-on-mobile"
    >
      Todos
    </div>
    <div
      className="show-on-desktop"
    >
      Todo
    </div>
    <div
      className="show-on-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <TodoListItem
      amount={195}
      createdAt={0}
      description="Gum"
      id="1"
      key="1"
      note=""
    />
    <TodoListItem
      amount={109500}
      createdAt={-345600000}
      description="Rent"
      id="2"
      key="2"
      note=""
    />
    <TodoListItem
      amount={4500}
      createdAt={345600000}
      description="Credit card"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
